# rs-web-tasks

./: Cargo.toml  diesel.toml
migrations/2025-04-19-134923_create_things/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
